force-app/main/default/objects/Recommended_Bids__c/Recommended_Bids__c.object-meta.xml
<CustomObject>
    <label>Recommended Bid</label>
    <nameField>
        <displayFormat>Rec-{0000}</displayFormat>
        <label>Recommended Bid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommended Bids</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>