force-app/main/default/objects/Recommended_Bids__c/fields/Agent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_First_Name__c</fullName>
    <description>N/A as answer acceptable</description>
    <label>Agent First Name</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>