force-app/main/default/objects/Recommended_Bids__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <label>Player Valuation</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>