force-app/main/default/objects/Recommended_Bids__c/fields/Player_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Player_Last_Name__c</fullName>
    <label>Player Last Name</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>